@@ -1,13 +1,17 @@
 -server
--XX:InitialRAMPercentage=25
--XX:MaxRAMPercentage=25
--XX:G1HeapRegionSize=128M
+-Xmx4G
+-XX:InitialRAMPercentage=40
+-XX:MaxRAMPercentage=40
+-XX:G1HeapRegionSize=32M
 -XX:+ExplicitGCInvokesConcurrent
--XX:+HeapDumpOnOutOfMemoryError
 -XX:+ExitOnOutOfMemoryError
+-XX:+HeapDumpOnOutOfMemoryError
 -XX:-OmitStackTraceInFastThrow
--XX:ReservedCodeCacheSize=256M
+-XX:ReservedCodeCacheSize=512M
 -XX:PerMethodRecompilationCutoff=10000
 -XX:PerBytecodeRecompilationCutoff=10000
 -Djdk.attach.allowAttachSelf=true
 -Djdk.nio.maxCachedBufferSize=2000000
+-Dfile.encoding=UTF-8
+# Allow loading dynamic agent used by JOL
+-XX:+EnableDynamicAgentLoading
